2005-07-12  Nathaniel Smith  <njs@pobox.com>

	* testsuite.at (NETSYNC_SERVE_START, NETSYNC_SERVE_N_START):
	Really, really really fix up quoting.  Really.
	I hope.

2005-07-12  Nathaniel Smith  <njs@pobox.com>

	* contrib/ciabot_monotone.py (config.project_for_branch): Clarify
	comment text for non-Python programmers.

2005-07-12  Nathaniel Smith  <njs@pobox.com>

	* testsuite.at (NETSYNC_SERVE_START, NETSYNC_SERVE_N_START): Fixup
	quoting.

2005-07-11  Nathaniel Smith  <njs@pobox.com>

	* crypto_tests.cc: New SHA1 correctness tests from Kaushik Veeraraghavan.
	* unit_tests.cc (init_unit_test_suite): 
	* unit_tests.hh (add_crypto_tests): 
	* Makefile.am (unit_tests_SOURCES): Call them.
	* AUTHORS: Add Kaushik Veeraraghavan.

2005-07-11  Nathaniel Smith  <njs@pobox.com>

	* tests/t_netsync_exclude_default.at: New test.
	* testsuite.at: Add it.
	(NETSYNC_SERVE_N_START, NETSYNC_SERVE_START): Use '*' as pattern
	when none is passed.

2005-07-11  Nathaniel Smith  <njs@pobox.com>

	* monotone.texi (Network): Tweak documentation for netsync
	commands.

2005-07-11  Nathaniel Smith  <njs@pobox.com>

	* app_state.{hh,cc} (exclude_patterns, add_exclude): 
	* options.hh (OPT_EXCLUDE): 
	* monotone.cc (coptions, cpp_main): New option --exclude.
	* commands.cc (pull, push, sync, serve): Accept it.
	(process_netsync_args): Implement it.
	* tests/t_netsync_exclude.at: New test.
	* testsuite.at: Add it.

2005-07-11  Timothy Brownawell  <tbrownaw@gmail.com>

	* options.hh, app_state.{hh,cc}, monotone.cc: New command specific
	option, "--exclude=x", puts arg into a vector app.excludes .
	Used by the netsync commands.
	* commands.cc (netsync commands): accept said option
		(process_netsync_args): Handle excludes.
	* monotone.texi: document it

2005-07-11  Timothy Brownawell  <tbrownaw@gmail.com>

	* interner.hh: make slightly faster

2005-07-10  Nathaniel Smith  <njs@pobox.com>

	* ChangeLog, configure.ac: Re-remove mysteriously revived
	jibberish.
